--- a/mannger-java/pom.xml
+++ b/mannger-java/pom.xml
@@ -38,6 +38,18 @@
             <scope>provided</scope>
         </dependency>
 
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/MySQL/mysql-connector-java &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>MySQL</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.40</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.39</version>
+        </dependency>
 
     </dependencies>
 
